# oshw1

./: .gitignore  .signals.cpp.swp  CMakeLists.txt  Command.cpp  Command.h  FgCommand.cpp  FgCommand.h  JobsCommand.cpp  JobsCommand.h  KillCommand.cpp  KillCommand.h  Makefile  PWDcommand.cpp  PWDcommand.h  README  README.md  State.cpp  State.h  Terminal.cpp  Terminal.h  cdCommand.cpp  cdCommand.h  cpCOMMAND.cpp  cpCOMMAND.h  difCOMMAND.cpp  difCOMMAND.h  dry.docx  histCOMMAND.cpp  histCOMMAND.h  os.txt  quitCOMMAND.cpp  quitCOMMAND.h  shpdCOMMAND.cpp  shpdCOMMAND.h  signals.cpp  signals.h  smash.cpp
dry2/: 319407045_306573502.docx  Dry2.docx
tests/: DifTextFile.txt  FG2FAILTEST.in  bgCrash.in  cpdifTest.in  cpdifTest.out  enterBug.in  infloop.c  infloop.out  infloop_noterm.c  input2.txt  out2.txt  outerBugSigkill.in  run_tests.py  sig_job.in  sig_job.out  test1.out  test2.in  test2.out  testOut.txt  test_fg.in  test_fg.out
